--- a/public/back1/index.html
+++ b/public/back1/index.html
@@ -5,8 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
+  <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+  <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-  真的好了吗?
+   <!-- 左侧的侧边栏 -->
+  <div class="lt_aside">
+    <div class="brand"><a href="#">黑马29</a></div>
+    <div class="user"><img src="./images/default.png" alt=""><p>超级管理员</p></div>
+    <div class="nav">
+      <ul>
+        <li><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+        <li>
+          <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
+         <div class="child">
+            <a href="first.html">一级分类</a>
+            <a href="second.html">二级分类</a>
+         </div>
+        </li>
+        <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+      </ul>
+    </div>
+  </div>
+  <!-- 右侧的头部 -->
+  <div class="lt_main">
+    <!-- 头部 -->
+    <div class="lt_topbar">
+       <a href="javascript:;" class="icon_left pull-left"><i class="glyphicon glyphicon-align-justify"></i></a>
+       <a href="javascript:;" class="icon_right pull-right"><i class="glyphicon glyphicon-log-out"></i></a>
+    </div>
+    <div class="container-fluid">
+        <!-- 连接导航 -->
+        <ol class="breadcrumb">
+            <li><a href="index.html">管理系统</a></li>
+            <li class="active">首页</li>
+          </ol>
+        <!-- 图形的容器 -->
+        <div class="lt_content">
+          <div class="echarts_left pull-left"></div>
+          <div class="echarts_right pull-right"></div>
+        </div>
+    </div>
+  </div>
+  <!-- 模态框 -->
+  <div class="modal fade" tabindex="-1" id="logoutModal">
+      <div class="modal-dialog modal-sm" >
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" ><span>&times;</span></button>
+            <h4 class="modal-title">温馨提示</h4>
+          </div>
+          <div class="modal-body">
+            <p class="red"><i class="glyphicon glyphicon-info-sign"></i><span>您确定要退出后台管理系统吗？</span></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary" id="logoutBtn">退出</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+  <script src="./lib/jquery/jquery.min.js"></script>
+  <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+  <script src="./lib/nprogress/nprogress.js"></script>
+  <script src="./lib/echarts/echarts.min.js"></script>
+
+  <script src="./js/login.js"></script>
+  <script src="./js/commom.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
