--- a/public/front-a/searchList.html
+++ b/public/front-a/searchList.html
@@ -36,8 +36,8 @@
         <!-- 乐淘排序 -->
         <div class="lt_sort">
           <a href="#"><span>上架时间</span><i class="fa fa-angle-down"></i></a>
-          <a href="#"><span>价格</span><i class="fa fa-angle-down"></i></a>
-          <a href="#"><span>库存</span><i class="fa fa-angle-down"></i></a>
+          <a href="#" data-type="price"><span>价格</span><i class="fa fa-angle-down"></i></a>
+          <a href="#" data-type="num"><span>库存</span><i class="fa fa-angle-down"></i></a>
           <a href="#"><span>折扣</span><i class="fa fa-angle-down"></i></a>
         </div>
 
@@ -126,12 +126,28 @@
   </div>
 </div>
 
-
+<script type="text/html" id="tpl">
+  <ul>
+    {{ each data v i }}
+    <li class="lt_product_item">
+      <a href="product.html?productId={{ v.id }}">
+        <img src="{{ v.pic[0].picAddr }}" alt="">
+        <p class="info mui-ellipsis-2">{{ v.proName }}</p>
+        <p>
+          <span class="price">¥{{ v.price }}</span>
+          <span class="oldPrice">¥{{ v.oldPrice }}</span>
+        </p>
+        <button class="mui-btn mui-btn-primary">立即购买</button>
+      </a>
+    </li>
+    {{ /each }}
+  </ul>
+</script>
 
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/zepto/zepto.min.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
-<script src="./js/common.js"></script>
+<script src="./js/commit.js"></script>
 <script src="./js/searchList.js"></script>
 </body>
 </html>
